# lazyrouter

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_CN.md  config.example.yaml  example_client.py  fix_test_router_caching.py  main.py  pyproject.toml  run.sh  start_server.sh  view_routing.py
.claude/: settings.local.json
.codex/: config.toml
.trellis/: .template-hashes.json  workflow.md
docs/: API_STYLES.md  MULTI_API_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_API_STYLES.md  README.md  UV_GUIDE.md  cache-aware-routing.md  gemini_proxy_tool_calling_learnings.md  proxy_learning_points.md
ideas/: CONTEXT_LEARNINGS.md  FILES_CREATED.md  SCRIPTS_README.md  archived_tool_filtering_routing_experiment_2026-02-25.md  compression_report.md  lazyrouter_caching_implementation.md  prompt_caching_guide.md  system_prompt_analysis.md
lazyrouter/: __init__.py  __main__.py  anthropic_adapter.py  anthropic_models.py  cache_tracker.py  cli.py  config.py  config_admin.py  constants.py  context_compressor.py  error_logger.py  exchange_logger.py  gemini_retries.py  health_checker.py  litellm_utils.py  message_utils.py  model_normalization.py  models.py  pipeline.py  retry_handler.py  router.py  routing_logger.py  sanitizers.py  server.py  session_utils.py  summarizer.py  tool_cache.py  usage_logger.py
scripts/: _utils.py  analyze_logs.py  analyze_payload_growth.py  analyze_system_prompt.py  analyze_tools.py  export_repro_case.py  minimize_fixtures.py
test_proxy/: README.md  __init__.py  proxy.py
tests/: README.md  README_E2E.md  (+40 more)
(+26 files in other folders)
