[project]
name = "lazyrouter"
version = "0.1.0"
description = "Lightweight OpenAI-compatible router that picks the best model for each request"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.6",
    "httpx>=0.27.0",
    "litellm>=1.26.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
lazyrouter = "lazyrouter.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lazyrouter*"]
exclude = ["logs*", "tests*", "docs*", "scripts*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
